src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;


.input{
    @apply h-8 border-[.1em] rounded-sm border-black focus:outline-none
}

::-webkit-scrollbar{
    display: none;
}

:root{
    overflow-x: hidden;
}

